--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="../dist/css/index.css"></script> 
+    <link rel="stylesheet" href="../dist/css/index.css">
   </head>
   <body>
-    
+
     <div id="root"></div>
 
-     <script src="../dist/js/index.bundle.min.js"></script> 
+     <script src="../dist/js/index.bundle.min.js"></script>
   </body>
 </html>
