--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../dist/css/index.css">
+    <title>Please Customize By Yourself</title>
+    <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
 
     <div id="root"></div>
-
-     <script src="../dist/js/index.bundle.min.js"></script>
   </body>
 </html>
