--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Please Customize By Yourself</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
   </head>
   <body>
 
     <div id="root"></div>
+    <script src="//cdn.jsdelivr.net/ramda/latest/ramda.min.js"></script>
   </body>
 </html>
